# TEE-ACM2

./: .gitignore  CMakeLists.txt  LICENSE  README.md  cmd_line_parser.hpp  cpu_mat_mult.hpp  cuda_config.cuh  cupy.cuh  dmatrix.hpp  fused_left_mat_mult.cuh  get_tile_sizes.cpp  launch_kernel.cuh  main.cu  mat_tree.hpp  no_atomic_adds_left_mat_mult.cuh  nvmlPower.hpp  old_opt_single_mat_mult.cuh  opt_single_mat_mult.cuh  tee_acm.cuh
single_mat_mult_scripts/compile_tee_acm/: all_compile.sh  compile_mat_test.sh  sanity_check.sh
single_mat_mult_scripts/mcm_scripts/: common_classes_kernel.py  common_functions_kernel.py  config_kernel.py  launch_kernels.py
single_mat_mult_scripts/perf_scripts/run_tests_round_robin/: common_classes.py  common_functions.py  run_experiments_rounds_robin.py
single_mat_mult_scripts/perf_scripts/run_tests_sequentialy/: common_functions.py  config.py  run_tests_seq.py
